--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ task sourcesJar(type: Jar) {
 
 java {
   toolchain { 
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
   }
   withSourcesJar()
   withJavadocJar()
@@ -94,8 +94,8 @@ configurations {
 // make sure to set the compliance to Java 1.8 in the project properties if the Java version is later than 1.8
 // make sure to set Java Compiler > Errors Warnings > Deprecated and Restricted API > Forbidden reference to WARNING instead of ERROR
 dependencies {
-    implementation group: 'io.github.cwfc-ccfb', name: 'repicea', version: '[1.10.4,)'    
-    implementation group: 'io.github.cwfc-ccfb', name: 'repicea-mathstats', version: '[1.4.0,)'    
+    implementation group: 'io.github.cwfc-ccfb', name: 'repicea', version: '[1.13.0,)'    
+    implementation group: 'io.github.cwfc-ccfb', name: 'repicea-mathstats', version: '[1.6.0,)'    
 
     testImplementation "junit:junit:4.13.2"    
 }
@@ -182,8 +182,8 @@ publishing {
 	       		]
         		licenses {
         			license {
-        				name = 'GNU Lesser General Public License 2.1'
-        				url  = 'https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html'
+        				name = 'GNU Lesser General Public License 3.0'
+        				url  = 'https://www.gnu.org/licenses/lgpl-3.0'
         			}
         		}
         		developers {
