--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ repositories {
 		url "https://repo1.maven.org/maven2/"
 	}
     mavenCentral()
+    mavenLocal()
 }
 
 println "Using java version " + JavaVersion.current()
@@ -97,7 +98,7 @@ dependencies {
     implementation group: 'io.github.cwfc-ccfb', name: 'repicea', version: '[1.13.0,)'    
     implementation group: 'io.github.cwfc-ccfb', name: 'repicea-mathstats', version: '[1.6.0,)'    
 
- 	implementation group: 'com.sun.xml.bind', name:'jaxb-ri', version: '[4.0.5,)'   
+// 	implementation group: 'com.sun.xml.bind', name:'jaxb-ri', version: '[4.0.5,)'   
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '[2.14.2,)'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '[2.14.2,)'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '[2.14.2,)'
