--- a/build.gradle
+++ b/build.gradle
@@ -92,12 +92,11 @@ configurations {
 // make sure to set the compliance to Java 1.8 in the project properties if the Java version is later than 1.8
 // make sure to set Java Compiler > Errors Warnings > Deprecated and Restricted API > Forbidden reference to WARNING instead of ERROR
 dependencies {
-    implementation group: 'io.github.cwfc-ccfb', name: 'repicea', version: '[1.15.4,)'    
-    implementation group: 'io.github.cwfc-ccfb', name: 'repicea-mathstats', version: '[1.7.6,)'    
+    implementation group: 'io.github.cwfc-ccfb', name: 'repicea', version: '[1.17.0,)'    
+    implementation group: 'io.github.cwfc-ccfb', name: 'repicea-mathstats', version: '[1.8.1,)'    
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '[2.14.2,)'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '[2.14.2,)'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '[2.14.2,)'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.20.0-rc1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.20.0-rc1'
 
     testImplementation "junit:junit:4.13.2"    
 }
